# ai-tutor-backend

./: .env.example  .gitignore  docker-compose.yml
ai_transformer/: .gitignore  Cargo.toml  Dockerfile
ai_transformer/src/: gpt2.rs  llama.rs  main.rs
backend/database/: database.go
backend/router/: router.go
